--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,39 @@
+Fbcrypt==3.2.2
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.0.12
+click==8.0.4
+dataclasses==0.8
+dnspython==2.2.1
+docopt==0.6.2
+email-validator==1.2.1
 Flask==2.0.3
-Flask_Bcrypt==1.0.1
-Flask_Login==0.5.0
-Flask_SQLAlchemy==2.5.1
-Flask_WTF==1.0.1
+Flask-Bcrypt==1.0.1
+Flask-Login==0.5.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
+greenlet==1.1.2
+gunicorn==20.1.0
+idna==3.3
+importlib-metadata==4.8.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+numpy==1.19.5
 pandas==1.1.5
+pipreqs==0.4.11
+pkg-resources==0.0.0
+pycparser==2.21
+python-dateutil==2.8.2
+pytz==2022.1
+requests==2.27.1
+six==1.16.0
+SQLAlchemy==1.4.39
+typing-extensions==4.1.1
+urllib3==1.26.11
 Werkzeug==2.0.3
 WTForms==3.0.0
-gunicorn==20.1.0
+yarg==0.1.9
+zipp==3.6.0
+
 
